# echofield

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  WARP.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
docker/: web-entrypoint.sh
nginx/: echofield.conf
src/: manage.py
src/blog/: admin.py  apps.py  forms.py  sitemaps.py  tests.py  translation.py  urls.py
src/blog/forms/: __init__.py  post.py
src/blog/management/commands/: create_fixtures.py
src/blog/migrations/: 0001_initial.py  0002_post_content_en_post_content_uk_post_slug_en_and_more.py  0003_alter_post_content_alter_post_content_en_and_more.py  0004_post_featured_image.py  0005_remove_post_blog_post_status_5b2843_idx_and_more.py  0006_category_post_categories.py
src/blog/models/: __init__.py  categories.py  posts.py
src/blog/static/blog/: lang-switcher.js  style.css
src/blog/templates/: base.html  post_detail.html  post_editor.html  post_list.html  post_manage_list.html
src/blog/templates/partials/: footer.html  header.html
src/blog/tests/: test_markdown_flow.py  test_models.py  test_views.py
src/blog/utils/: images.py  seo.py
src/blog/views/: __init__.py  post_create.py  post_detail.py  post_list.py  posts.py  seo.py
src/echofield/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
src/echofield/settings/: __init__.py  auth.py  base.py  db.py  installed_apps.py  settings.py  storage.py
src/echofield/settings/components/: apps.py  base.py  database.py  i18n.py  security.py  sentry.py  storage.py
src/echofield/settings/config/: __init__.py  base.py
src/frontend/: base.css  generate-themes.ts  lang-switcher.ts  main.ts  post.css  theme-switcher.ts  themes.css  themes.ts
src/locale/en/LC_MESSAGES/: django.mo  django.po
src/locale/uk/LC_MESSAGES/: django.mo  django.po
