[project]
name = "echofield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-modeltranslation>=0.19.17",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.10",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "django-environ>=0.12.0",
    "ruff>=0.14.0",
]
