[project]
name = "echofield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.55",
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-markdownx>=4.0.9",
    "django-modeltranslation>=0.19.17",
    "django-storages>=1.14.6",
    "django-unfold>=0.68.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.10",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "django-environ>=0.12.0",
    "ruff>=0.14.0",
]
